--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,9 @@ blockquote {
 @media (max-width: 991px) {
   #testimonials {
     background-image: url(../img/infinite-loop-02-mobile.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 100%;
   }
 }
 
