--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ blockquote {
 
 /* Testimonials */
 #testimonials {
-  color: white;
+  color: #0B8C43 !important;
   background-image: url(../img/infinite-loop-02.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -292,7 +292,7 @@ blockquote {
 
 @media (max-width: 991px) {
   #testimonials {
-    /* background-image: url(../img/infinite-loop-02-mobile.jpg); */
+    background-image: url(../img/infinite-loop-02-mobile.jpg);
     background-color: #001828;
     background-size: cover;
     background-repeat: no-repeat;
